Add Testsuite (#160)