@@ -81,6 +81,7 @@ along with ShieldBlaze ExpressGateway.  If not, see <https://www.gnu.org/license
         <module>service-discovery-server</module>
         <module>shaded-dependencies</module>
         <module>testing</module>
+        <module>testsuite</module>
     </modules>
 
     <repositories>
@@ -371,6 +372,11 @@ along with ShieldBlaze ExpressGateway.  If not, see <https://www.gnu.org/license
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
+                <configuration>
+                    <argLine>
+                        --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
